# podcast-api-rust

./: Cargo.toml  README.md
examples/sample/: Cargo.toml
examples/sample/src/: main.rs
src/: api.rs  client.rs  error.rs  lib.rs
src/podcast_api/: api.rs  client.rs  error.rs  mod.rs
tests/: client_tests.rs
