[package]
name = "podcast-api"
version = "0.1.0"
authors = ["Cameron Fyfe <cameron.j.fyfe@gmail.com>"]
edition = "2018"
description = "Rust bindings for the Listen Notes Podcast API"
license = "MIT"
keywords = ["listennotes", "podcast"]
documentation = "https://docs.rs/podcast-api"
repository = "https://github.com/ListenNotes/podcast-api-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1"
http = "0.2"
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
