[package]
name = "podcast-api"
version = "1.1.5"
authors = ["Listen Notes, Inc. <hello@listennotes.com>"]
edition = "2018"
description = "Rust bindings for the Listen Notes Podcast API"
license = "MIT"
keywords = ["listennotes", "podcast", "searchengine", "podcastsearch"]
documentation = "https://www.listennotes.com/api/docs/"
repository = "https://github.com/ListenNotes/podcast-api-rust"
readme = "README.md"
homepage = "https://www.listennotes.com/api/"
categories = ["api-bindings", "multimedia::audio", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1"
http = "0.2"
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
