[package]
name = "sample"
version = "0.1.0"
authors = ["Cameron Fyfe <cameron.j.fyfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listennotes = { version = "^0", path = "../../" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
tokio = { version = "1", features = ["full"] }
